--- a/einv_sa/report/account_move.xml
+++ b/einv_sa/report/account_move.xml
@@ -34,8 +34,8 @@
                         <div class="col-4 text-right"><Strong>تاريخ الفاتورة</Strong></div>
                     </div>
                     <div class="row">
-                        <div class="col-4"><Strong>Delivery Date</Strong></div>
-                        <div class="col-4 text-center"><span t-field="doc.einv_sa_delivery_date"></span></div>
+                        <div class="col-4"><Strong>Due Date of Payment</Strong></div>
+                        <div class="col-4 text-center"><span t-field="doc.invoice_payment_term_id"></span></div>
                         <div class="col-4 text-right"><Strong>تاريخ التوريد</Strong></div>
                     </div>
                      <div class="row">
@@ -48,6 +48,11 @@
                         <div class="col-4 text-center"><span t-field="doc.x_studio_end_date"></span></div>
                         <div class="col-4 text-right"><Strong>المرجع رقم</Strong></div>
                     </div>
+                   <!-- <div class="row">
+                        <div class="col-4"><Strong>Payment Terms</Strong></div>
+                        <div class="col-4 text-center"><span t-field="doc.invoice_payment_term_id"></span></div>
+                        <div class="col-4 text-right"><Strong>شروط الدفع</Strong></div>
+                    </div>-->
                 </div>
                 <div class="col-3" >
 <!--                    <span t-esc="doc.einv_sa_qr_code_str"></span>-->
@@ -64,8 +69,8 @@
 
         <template id="einv_sa.partner_info">
             <div class="row p-1 mt-1  bg-light">
-                <div class="col-6"><Strong>Buyer</Strong></div>
-                <div class="col-6 text-right"><Strong>العميل</Strong></div>
+                <div class="col-6"><Strong>Customer Details</Strong></div>
+                <div class="col-6 text-right"><Strong>تفاصيل العميل</Strong></div>
             </div>
             <div class="px-2">
                 <div class="row">
@@ -73,11 +78,11 @@
                     <div class="col-5 text-center"><span t-field="doc.partner_id.name"></span></div>
                     <div class="col-4 text-right"><Strong>الاسم</Strong></div>
                 </div>
-               <!-- <div class="row">
+                <div class="row">
                    <div class="col-3"><Strong>Building No</Strong></div>
                     <div class="col-5 text-center"><span t-field="doc.partner_id.building_no"></span></div>
                     <div class="col-4 text-right"><Strong>رقم المبني</Strong></div>
-                </div>-->
+                </div>
                 <div class="row">
                     <div class="col-3"><Strong>Street</Strong></div>
                     <div class="col-5 text-center"><span t-field="doc.partner_id.street"></span></div>
@@ -88,11 +93,11 @@
                     <div class="col-5 text-center"><span t-field="doc.partner_id.district"></span></div>
                     <div class="col-4 text-right"><Strong>الحي</Strong></div>
                 </div>-->
-                <!--<div class="row">
+                <div class="row">
                     <div class="col-3"><Strong>City</Strong></div>
                     <div class="col-5 text-center"><span t-field="doc.partner_id.city"></span></div>
                     <div class="col-4 text-right"><Strong>المدينة</Strong></div>
-                </div>-->
+                </div>
                  <div class="row">
                   <div class="col-3"><Strong>Country</Strong></div>
                     <div class="col-5 text-center"><span t-field="doc.partner_id.country_id.name"></span>
@@ -138,7 +143,7 @@
             <table class="table table-sm o_main_table " name="invoice_line_ids_table">
                 <thead class="bg-light text-center">
                     <tr>
-                        <td class="text-left"><div class="mw-100">Description</div><div class="mw-100 ">
+                        <td class="text-left"><div class="mw-100">Name</div><div class="mw-100 ">
                             الوصف</div></td>
                         <td><div class="mw-100">Price Unit</div><div class="mw-100 "> سعر الوحدة</div></td>
                         <td><div class="mw-100">Quantity</div><div class="mw-100 "> الكمية</div></td>
