--- a/einv_sa/report/base_document_layout.xml
+++ b/einv_sa/report/base_document_layout.xml
@@ -3,24 +3,24 @@
     <data>
         <!-- report qweb view -->
         <!--         <span t-field="company.report_footer"/>-->
-        <template id="financial_layout_row">
+       <template id="financial_layout_row">
             <div class="row">
                 <div class="col-6">
                     <div class="row  mx-1 border-bottom">
-                        <div class="col-3 px-0 text-left">CR No:</div>
+                        <!--<div class="col-3 px-0 text-left">CR No:</div>
                         <div class="col-4 px-0 "><span t-field="company.company_registry"></span></div>
-                        <div class="col-5 px-0  text-right">:رقم سجل الشركة</div>
+                        <div class="col-5 px-0  text-right">:رقم سجل الشركة</div>-->
                     </div>
 
                 </div>
 
-                <div class="col-6">
+                <!--<div class="col-6">
                     <div class="row  mx-1 border-bottom">
                         <div class="col-4 px-0  text-left">Vat No:</div>
                         <div class="col-4 px-0 "><span t-field="company.vat"></span></div>
                         <div class="col-4 px-0  text-right">:الرقم الضريبي</div>
                     </div>
-                </div>
+                </div>-->
             </div>
 
 
